# ln_iot

./: CMakeLists.txt  ESP-IDF 5.1.ps1  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
cmake/: vars.cmake
components/ln3rd/googletest/: CMakeLists.txt
components/lnalgo/: CMakeLists.txt  lnalgo.h  lnbase64.cpp  lnbase64.h
components/lnbase/: lnbase.h  lnplatform.h  lnpp.h
components/lnconfig/: CMakeLists.txt  Kconfig
components/lndriver/: CMakeLists.txt
components/lntests/: CMakeLists.txt  lnserializer_test.cpp  lntest.cpp
components/lnutility/: lnserializer.h  lntype_tarits.h  lnutility.h
main/: CMakeLists.txt  main.cpp
module_config/: partitions.csv
